Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomfun-postgres
  labels:
    app: randomfun-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomfun-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: randomfun-postgres
    spec:
      containers:
      - name: randomfun-postgres
        image: postgres:14.5
        ports:
          - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/mysql-files/randomfun"
          name: randomfun-pv
      volumes:
        - name: randomfun-pv
          persistentVolumeClaim:
            claimName: randomfun-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomfun-backend
  labels:
    app: randomfun-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomfun-backend
  template:
    metadata:
      labels:
        app: randomfun-backend
    spec:
      containers:
        - name: randomfun-backend
          image: 162.19.66.30:7000/randomfun-backend:kube-v0.9.2
          ports:
            - containerPort: 7777
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomfun-frontend
  labels:
    app: randomfun-frontend
  namespace: randomfun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomfun-frontend
  template:
    metadata:
      labels:
        app: randomfun-frontend
    spec:
      containers:
      - name: randomfun-frontend
        image: 162.19.66.30:7000/randomfun-frontend:kube-v0.3
        ports:
        - containerPort: 8089
