Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: randomfun-postgres-svc
  labels:
    app: randomfun-postgres-svc
spec:
  selector:
    app: randomfun-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: randomfun-backend-svc
  labels:
    app: randomfun-backend-svc
spec:
  type: LoadBalancer
  selector:
    app: randomfun-backend
  ports:
    - port: 7777
      targetPort: 7777
